# SpellRadialMenu

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  RadialMenuProfile.me3  RadialSpellMenuProfile.me3  build.ps1  build.sh  fix_file_load.py  myprofile.me3  test_bhd.cpp
.github/workflows/: build.yml
cmake/: llvm-mingw-toolchain.cmake  mingw-w64-toolchain.cmake
src/: asset_reader.cpp  common.h  dllmain.cpp  dx12_hook.cpp  dx12_hook.h  dx12_hook_broken.cpp  eldenring_font.h  icon_loader.cpp  icon_loader.h  input_hook.cpp  input_hook.h  radial_menu.cpp  radial_menu.h  spell_manager.cpp  spell_manager.h  spell_metadata.cpp  spell_metadata.h
src/core/: common.h  dllmain.cpp  log.cpp
src/game/equipment/: equip_access.cpp  equip_access.h  radial_slots.cpp  radial_slots.h  spell_manager.cpp  spell_manager.h
src/game/input/: game_input_probe.cpp  game_input_probe.h  in_game_pad.cpp  in_game_pad.h  native_input.cpp  native_input.h  radial_camera.cpp  radial_camera.h  radial_switch.cpp  radial_switch.h
src/game/messages/: message_repository.cpp  message_repository.h
src/game/metadata/: item_metadata.cpp  item_metadata.h  seamless_coop_metadata.cpp  seamless_coop_metadata.h  spell_metadata.cpp  spell_metadata.h
src/game/params/: param_repository.cpp  param_repository.h
src/game/state/: gameplay_state.cpp  gameplay_state.h  singleton_resolver.cpp  singleton_resolver.h
src/input/: input_hook.cpp  input_hook.h  radial_input.cpp  radial_input.h
src/render/assets/: dcx.cpp  dcx.h  icon_assets.cpp  icon_assets.h  loose_asset_reader.cpp  loose_asset_reader.h
src/render/d3d/: d3d_texture_upload.cpp  d3d_texture_upload.h  dx12_hook.cpp  dx12_hook.h  dx12_vtable.cpp  dx12_vtable.h
src/render/icons/: icon_loader.cpp  icon_loader.h
src/render/ui/: eldenring_font.h  radial_menu.cpp  radial_menu.h  radial_menu_draw.cpp  radial_menu_draw.h
src/render/vfs/: asset_reader.cpp  asset_reader.h  game_vfs.cpp  game_vfs.h  path_utils.cpp  path_utils.h
